put the logo in

--- a/Final Try/login.html
+++ b/Final Try/login.html
@@ -20,11 +20,13 @@
 </head>
 
 <body>
+    <div class="logoDiv">
 
+    </div>
     <div class="loginCenter">
-        <div class="insideUpper">
+        <!-- <div class="insideUpper">
 
-        </div>
+        </div> -->
         <div class="loginForm">
             <!-- <form action="">
                 <input type="text" placeholder="Username">
