--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -20,25 +20,50 @@
 </head>
 
 <body>
-    <div class="sidebar">
-        <a href="" class="sideSelect active">Test</a>
+    <div id="myDIV" class="sidebar">
+        <!-- <a href="" class="sideSelect active" onclick="test()">Test</a>
         <a href="" class="sideSelect">Test</a>
         <a href="" class="sideSelect">Test</a>
         <a href="" class="sideSelect">Test</a>
+        <button onclick="test()">btn</button> -->
+        <button class="btn">1</button>
+        <button class="btn active">2</button>
+        <button class="btn">3</button>
+        <button class="btn">4</button>
+        <button class="btn">5</button>
     </div>
     <div class="content">
 
     </div>
 </body>
-
+<!-- 
 <script>
-    var header = document.getElementById("sidebar");
-    var btns = header.getElementsByClassName("sideSelect");
+    // function test() {
+    //     // var header = document.getElementById("sidebar");
+    //     // var btns = header.getElementsByClassName("sideSelect");
+    //     alert("test");
+    //     // for (var i = 0; i < btns.length; i++) {
+    //     //     btns[i].addEventListener("click", function() {
+    //     //         var current = document.getElementsByClassName("active");
+    //     //         current[0].className = current[0].className.replace("active", "");
+    //     //         this.className += "active";
+    //     //     });
+    //     // }
+    // }
+</script> -->
+<script>
+    // Add active class to the current button (highlight it)
+    var header = document.getElementById("myDIV");
+    var btns = header.getElementsByClassName("btn");
     for (var i = 0; i < btns.length; i++) {
         btns[i].addEventListener("click", function() {
             var current = document.getElementsByClassName("active");
-            current[0].className = current[0].className.replace("active", "");
-            this.className += "active";
+            console.log("current before is :", current[0]);
+            current[0].className = current[0].className.replace(" active", "");
+            this.className += " active";
+            console.log("Current after is : ", current[0]);
+
+            console.log(this.className);
         });
     }
 </script>
