--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -21,50 +21,68 @@
 
 <body>
     <div id="myDIV" class="sidebar">
-        <!-- <a href="" class="sideSelect active" onclick="test()">Test</a>
-        <a href="" class="sideSelect">Test</a>
-        <a href="" class="sideSelect">Test</a>
-        <a href="" class="sideSelect">Test</a>
-        <button onclick="test()">btn</button> -->
-        <button class="btn">1</button>
-        <button class="btn active">2</button>
-        <button class="btn">3</button>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
+        <p class="slideSelect active" id="Home">Home</p>
+        <p class="slideSelect" id="News">News</p>
+        <p class="slideSelect" id="Doctor">Doctor</p>
+        <p class="slideSelect" id="Nurse">Nurse</p>
+        <button onclick="bonk()">hooooo</button>
+        <p class="slideSelect" id="test" style="display: none;">Dissapear</p>
     </div>
-    <div class="content">
+    <div id="contentDiv" class="content">
+        <div class="catOne" style="display: none;" id="Homediv"> </div>
+        <div class="catTwo" style="display: none;" id="Newsdiv"></div>
+        <div class="catThree" style="display: none;" id="Doctordiv" name="test" value="boooo"></div>
+        <div class="catFour" style="display: none;" id="Nursediv"></div>
+    </div>
 
-    </div>
+
 </body>
-<!-- 
-<script>
-    // function test() {
-    //     // var header = document.getElementById("sidebar");
-    //     // var btns = header.getElementsByClassName("sideSelect");
-    //     alert("test");
-    //     // for (var i = 0; i < btns.length; i++) {
-    //     //     btns[i].addEventListener("click", function() {
-    //     //         var current = document.getElementsByClassName("active");
-    //     //         current[0].className = current[0].className.replace("active", "");
-    //     //         this.className += "active";
-    //     //     });
-    //     // }
-    // }
-</script> -->
+
 <script>
     // Add active class to the current button (highlight it)
     var header = document.getElementById("myDIV");
-    var btns = header.getElementsByClassName("btn");
+    var btns = header.getElementsByClassName("slideSelect");
     for (var i = 0; i < btns.length; i++) {
         btns[i].addEventListener("click", function() {
             var current = document.getElementsByClassName("active");
-            console.log("current before is :", current[0]);
+            // console.log("current before is :", current[0]);
             current[0].className = current[0].className.replace(" active", "");
             this.className += " active";
-            console.log("Current after is : ", current[0]);
-
-            console.log(this.className);
+            console.log(this.id);
+            divFunc(this.id);
+            // var test = document.getElementById(this.id).textContent;
+            // console.log("Current after is : ", current[0]);
+            // console.log(test);
+            // console.log(this.className);
+            // console.log("id is :", this.id);
         });
+    }
+</script>
+
+<script>
+    function divFunc(divId) {
+        var div = divId.concat("div");
+        var main = document.getElementById("contentDiv");
+        var innerArr = main.getElementsByTagName("div");
+        for (var i = 0; i < innerArr.length; i++) {
+            // console.log(innerArr[i].id);
+            if (innerArr[i].id == div) {
+                // console.log("Matching pair is :", innerArr[i]);
+                // console.log("And :", div);
+                document.getElementById(innerArr[i].id).style.display = "block";
+                // var x = document.getElementById(div);
+                // x.style.display = "block";
+            } else {
+                document.getElementById(innerArr[i].id).style.display = "none";
+            }
+
+        }
+    }
+</script>
+
+<script>
+    function bonk() {
+        document.getElementById("test").style.display = "block";
     }
 </script>
 
