16th november done

--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -34,6 +34,9 @@
         <div class="catThree" style="display: none;" id="Doctordiv" name="test" value="boooo"></div>
         <div class="catFour" style="display: none;" id="Nursediv"></div>
     </div>
+    <div class="rightDiv ">
+
+    </div>
 
 
 </body>
