19th Nov 22 morning

--- a/Final Try/test.html
+++ b/Final Try/test.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<link rel="stylesheet" href="calendar.css">
+<script src="calendar.js"></script>
 <html>
 <!-- <script>
     function testFunction() {
@@ -61,9 +64,10 @@
 
 <body>
 
+    <div class="calendar"></div>
 
 
-    <div id="myDIV" class="sidebar">
+    <!-- <div id="myDIV" class="sidebar">
         <button class="btn" id="first" name="first">1</button>
 
         <button class="btn active" id="second">2</button>
@@ -91,7 +95,7 @@
 
             });
         }
-    </script>
+    </script> -->
 
 
 </body>
