started manage patient div

--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -80,9 +80,126 @@
                 </div>
             </div>
 
+            <div class="appointmentListdiv">
+                <table border="0" class="appointmentsTable">
+                    <!-- <caption>Appointments List</caption> -->
+                    <tr>
+                        <th>
+                            Appointments List
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Date</th>
+                        <th>Patient</th>
+                        <th>Doctor</th>
+                    </tr>
+                </table>
+                <div class="appointmentTile">
+                    <table border="0" class="appointmentsTable">
+                        <tr>
+                            <td>
+                                <p>19th Nov 2022</p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <!-- <p>Randila Senath</p> -->
+                                <p>Randila Senath </p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <p>Saveen Malinga</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="appointmentTile">
+                    <table border="0" class="appointmentsTable">
+                        <tr>
+                            <td>
+                                <p>19th Nov 2022</p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <!-- <p>Randila Senath</p> -->
+                                <p>Chathushi Gunapala </p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <p>Dilasha Tharindi</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="appointmentTile">
+                    <table border="0" class="appointmentsTable">
+                        <tr>
+                            <td>
+                                <p>19th Nov 2022</p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <!-- <p>Dinithi Abeysuriya</p> -->
+                                <p>Dinithi Abeysuriya </p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <p>Saveen Malinga</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+
+            </div>
+
         </div>
         <div class="catTwo" style="display: none;" id="Manage Patientdiv">
-            <p>Patient</p>
+            <div class="tileHolder">
+                <div class="homeTile">
+                    <div class="tileinner" style="background-image: url('src/appointments.png');"></div>
+                    <div class="test">
+                        <p>
+                            Appointments
+                        </p>
+                        <p>
+                            18
+                        </p>
+                    </div>
+                </div>
+                <div class="homeTile">
+                    <div class="tileinner" style="background-image: url('src/patient.png');"></div>
+                    <div class="test">
+                        <p>
+                            Patients
+                        </p>
+                        <p>
+                            1000
+                        </p>
+                    </div>
+                </div>
+                <div class="homeTile">
+                    <div class="tileinner" style="background-image:url('src/delete.png');"></div>
+                    <div class="test">
+                        <p>
+                            Delete Requests
+                        </p>
+                        <p>
+                            10
+                        </p>
+                    </div>
+                </div>
+                <div class="homeTile">
+                    <div class="tileinner" style="background-image: url('src/medical\ staff.png');">
+                    </div>
+                    <div class="test">
+                        <p>
+                            Total Medical Staff
+                        </p>
+                        <p>
+                            99
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="catTwo" style="display: none;" id="Manage Staffdiv">
             <p>staff</p>
