--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -5,8 +5,12 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="dashboard.css">
 
+    <!-- webpage icon -->
+    <link rel="icon" type="image/x-icon" href="src/logoSquare.png">
+    <!-- webpage icon -->
 
     <!-- imported font -->
 
@@ -21,7 +25,11 @@
 </head>
 
 <body>
-    <div id="myDIV" class="sidebar">
+
+    <div id="myDIV" class="sidebar" id="sideNavbar">
+        <br>
+        <i id="closeBtn" class="fa fa-close"></i>
+        <br>
         <p class="slideSelect active" id="Home">Home</p>
         <p class="slideSelect" id="Manage Patient">Manage Patient</p>
         <p class="slideSelect" id="Manage Staff">Manage Staff</p>
@@ -29,9 +37,10 @@
         <p class="slideSelect" id="Appointments">Appointments</p>
         <p class="slideSelect" id="Inventory">Inventory</p>
         <p class="slideSelect" id="Monthly Reports">Monthly Reports</p>
+
     </div>
     <div id="contentDiv" class="content">
-        <div class="catTwo" style="display: block;" id="Homediv">
+        <div class="catTwo" style="display: none;" id="Homediv">
             <div class="tileHolder">
                 <div class="homeTile">
                     <div class="tileinner" style="background-image: url('src/appointments.png');"></div>
@@ -201,8 +210,10 @@
                 </div>
             </div>
         </div>
-        <div class="catTwo" style="display: none;" id="Manage Staffdiv">
-            <p>staff</p>
+        <div class="catTwo" style="display: block;" id="Manage Staffdiv">
+            <button class="hamburgerIcon">
+                <i class="fa fa-bars"></i>
+            </button>
         </div>
         <div class="catTwo" style="display: none;" id="Billingdiv">
             <p>Bill</p>
@@ -221,7 +232,7 @@
     </div>
     <div class="rightDiv ">
         <div class="userImg">
-
+            <img src="src/userimage.png" alt="" class="loggedinuserImg">
         </div>
         <p>
             Dr.Saveen Malinga
@@ -321,9 +332,10 @@
 </script>
 
 <script>
-    function bonk() {
-        document.getElementById("test").style.display = "block";
-    }
+    var closebtn = document.getElementById("closeBtn");
+    closebtn.addEventListener("click", function() {
+        document.getElementById("sideNavbar").style.width = "0";
+    });
 </script>
 
 </html>
