--- a/Final Try/test.html
+++ b/Final Try/test.html
@@ -5,20 +5,49 @@
 
 
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
         .leftDiv {
             width: 20%;
             height: 100%;
             border: 2px solid red;
+            position: fixed;
+            background-color: antiquewhite;
+        }
+        
+        .maindiv {
+            margin-left: 20%;
+            height: 100%;
+            /* position: fixed; */
+            border: 1px solid black;
+            background-color: black;
+            width: 80%;
+            border: 1px solid blue;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="leftDiv">
-        test
+    <div class="leftDiv" id="testNav">
+        <p>
+            test
+        </p>
+    </div>
+    <div class="maindiv">
+        <br>
+        <br>
+        <button id="testBtn">
+            thoge appata
+        </button>
+        <button id="openBtn">
+            haal garapan
+        </button>
     </div>
 
 
@@ -27,5 +56,19 @@
 
 
 </body>
+
+<script>
+    var closebtn = document.getElementById("testBtn");
+    closebtn.addEventListener("click", function() {
+        document.getElementById("testNav").style.width = "0";
+    });
+</script>
+
+<script>
+    var openbtn = document.getElementById("openBtn");
+    openbtn.addEventListener("click", function() {
+        document.getElementById("testNav").style.width = "20%";
+    });
+</script>
 
 </html>
