--- a/Final Try/test.html
+++ b/Final Try/test.html
@@ -18,6 +18,8 @@
             border: 2px solid red;
             position: fixed;
             background-color: antiquewhite;
+            contain: content;
+            margin: 0 padding 0;
         }
         
         .maindiv {
@@ -26,8 +28,12 @@
             /* position: fixed; */
             border: 1px solid black;
             background-color: black;
-            width: 80%;
+            /* width: 80%; */
             border: 1px solid blue;
+        }
+        
+        i {
+            color: white;
         }
     </style>
 </head>
@@ -39,7 +45,7 @@
             test
         </p>
     </div>
-    <div class="maindiv">
+    <div class="maindiv" id="maindiv">
         <br>
         <br>
         <button id="testBtn">
@@ -48,6 +54,8 @@
         <button id="openBtn">
             haal garapan
         </button>
+        <br>
+        <i id="testi">test</i>
     </div>
 
 
@@ -58,9 +66,10 @@
 </body>
 
 <script>
-    var closebtn = document.getElementById("testBtn");
+    var closebtn = document.getElementById("testi");
     closebtn.addEventListener("click", function() {
-        document.getElementById("testNav").style.width = "0";
+        document.getElementById("testNav").style.width = "0px";
+        document.getElementById("maindiv").style.marginLeft = "0";
     });
 </script>
 
@@ -68,6 +77,7 @@
     var openbtn = document.getElementById("openBtn");
     openbtn.addEventListener("click", function() {
         document.getElementById("testNav").style.width = "20%";
+        document.getElementById("maindiv").style.marginLeft = "20%";
     });
 </script>
 
