Finished the Pop up window

--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -27,9 +27,9 @@
 <body>
 
     <div id="myDIV" class="sidebar" id="sideNavbar">
-        <br>
+        <!-- <br>
         <i id="closeBtn" class="fa fa-close"></i>
-        <br>
+        <br> -->
         <p class="slideSelect active" id="Home">Home</p>
         <p class="slideSelect" id="Manage Patient">Manage Patient</p>
         <p class="slideSelect" id="Manage Staff">Manage Staff</p>
@@ -157,6 +157,60 @@
                         </tr>
                     </table>
                 </div>
+                <div class="appointmentTile">
+                    <table border="0" class="appointmentsTable">
+                        <tr>
+                            <td>
+                                <p>19th Nov 2022</p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+
+                                <p>Dinithi Abeysuriya </p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <p>Saveen Malinga</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="appointmentTile">
+                    <table border="0" class="appointmentsTable">
+                        <tr>
+                            <td>
+                                <p>19th Nov 2022</p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+
+                                <p>Dinithi Abeysuriya </p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <p>Saveen Malinga</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="appointmentTile">
+                    <table border="0" class="appointmentsTable">
+                        <tr>
+                            <td>
+                                <p>19th Nov 2022</p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+
+                                <p>Dinithi Abeysuriya </p>
+                            </td>
+                            <td>
+                                <img src="src/userimage.png" alt="" class="patientImg">
+                                <p>Saveen Malinga</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
 
             </div>
 
@@ -211,9 +265,148 @@
             </div>
         </div>
         <div class="catTwo" style="display: block;" id="Manage Staffdiv">
-            <button class="hamburgerIcon">
+            <!-- <button class="hamburgerIcon">
                 <i class="fa fa-bars"></i>
-            </button>
+            </button> -->
+            <div class="tileHolder2">
+                <div class="homeTile" id="addStaffOpenbtn">
+                    <p>Add Staff Member</p>
+                </div>
+                <div class="homeTile"></div>
+            </div>
+            <div class="staffList" style="display: block;">
+                <table border="0" class="appointmentsTable">
+
+                    <tr>
+                        <th>
+                            Medical Staff
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Name</th>
+                        <th>Staff Id</th>
+                        <th>Job Role</th>
+                    </tr>
+                </table>
+                <table border="0" class="appointmentsTable">
+                    <tr>
+                        <td>
+                            <img src="src/userimage.png" alt="" class="patientImg">
+                            <p>Saveen Malinga</p>
+                        </td>
+                        <td>
+                            <p>69 </p>
+                        </td>
+                        <td>
+                            <p>Doctor</p>
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" class="appointmentsTable">
+                    <tr>
+                        <td>
+                            <img src="src/userimage.png" alt="" class="patientImg">
+                            <p>Dinithi Abeysuriya</p>
+                        </td>
+                        <td>
+                            <p>420 </p>
+                        </td>
+                        <td>
+                            <p>Nurse</p>
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" class="appointmentsTable">
+                    <tr>
+                        <td>
+                            <img src="src/userimage.png" alt="" class="patientImg">
+                            <p>Dilasha Thraindi</p>
+                        </td>
+                        <td>
+                            <p>120</p>
+                        </td>
+                        <td>
+                            <p>Nurse</p>
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" class="appointmentsTable">
+                    <tr>
+                        <td>
+                            <img src="src/userimage.png" alt="" class="patientImg">
+                            <p>Dilasha Thraindi</p>
+                        </td>
+                        <td>
+                            <p>120</p>
+                        </td>
+                        <td>
+                            <p>Nurse</p>
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" class="appointmentsTable">
+                    <tr>
+                        <td>
+                            <img src="src/userimage.png" alt="" class="patientImg">
+                            <p>Dilasha Thraindi</p>
+                        </td>
+                        <td>
+                            <p>120</p>
+                        </td>
+                        <td>
+                            <p>Nurse</p>
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" class="appointmentsTable">
+                    <tr>
+                        <td>
+                            <img src="src/userimage.png" alt="" class="patientImg">
+                            <p>Dilasha Thraindi</p>
+                        </td>
+                        <td>
+                            <p>120</p>
+                        </td>
+                        <td>
+                            <p>Nurse</p>
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" class="appointmentsTable">
+                    <tr>
+                        <td>
+                            <img src="src/userimage.png" alt="" class="patientImg">
+                            <p>Dilasha Thraindi</p>
+                        </td>
+                        <td>
+                            <p>120</p>
+                        </td>
+                        <td>
+                            <p>Nurse</p>
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" class="appointmentsTable">
+                    <tr>
+                        <td>
+                            <img src="src/userimage.png" alt="" class="patientImg">
+                            <p>Dilasha Thraindi</p>
+                        </td>
+                        <td>
+                            <p>120</p>
+                        </td>
+                        <td>
+                            <p>Nurse</p>
+                        </td>
+                    </tr>
+                </table>
+
+            </div>
+            <div class="addStaffWindow" id="addStaffWindowPop">
+                <div class="addStaffInner">
+                    <i class="fa fa-close closebtn" id="addStaffClosebtn" style="display: none;"></i>
+                </div>
+            </div>
         </div>
         <div class="catTwo" style="display: none;" id="Billingdiv">
             <p>Bill</p>
@@ -335,6 +528,20 @@
     var closebtn = document.getElementById("closeBtn");
     closebtn.addEventListener("click", function() {
         document.getElementById("sideNavbar").style.width = "0";
+    });
+</script>
+
+<script>
+    var close = document.getElementById("addStaffClosebtn");
+    close.addEventListener("click", function() {
+        document.getElementById("addStaffWindowPop").style.width = "0%";
+        close.style.display = "none";
+    });
+
+    var open = document.getElementById("addStaffOpenbtn");
+    open.addEventListener("click", function() {
+        document.getElementById("addStaffWindowPop").style.width = "75%";
+        close.style.display = "block";
     });
 </script>
 
