add Staff and add Patient Done

--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -41,7 +41,7 @@
 
     </div>
     <div id="contentDiv" class="content">
-        <div class="catTwo" style="display: none;" id="Homediv">
+        <div class="catTwo" style="display: block;" id="Homediv">
             <div class="tileHolder">
                 <div class="homeTile">
                     <div class="tileinner" style="background-image: url('src/appointments.png');"></div>
@@ -500,7 +500,7 @@
 
             </div>
         </div>
-        <div class="catTwo" style="display: block;" id="Manage Staffdiv">
+        <div class="catTwo" style="display: none;" id="Manage Staffdiv">
             <!-- <button class="hamburgerIcon">
                 <i class="fa fa-bars"></i>
             </button> -->
